--- a/Projects/Spiders/scrapy.cfg
+++ b/Projects/Spiders/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = mzitu.settings
+default = Spiders.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = mzitu
+project = Spiders
